fix(stage): fixed stage alignment issues

--- a/samples/create-your-own-ui/src/components/custom-dyte-grid.css
+++ b/samples/create-your-own-ui/src/components/custom-dyte-grid.css
@@ -1,7 +1,3 @@
-.participants-holder{
-    display: flex;
-}
-
 .participants-with-shared-screen{
     display: flex;
 }
